--- a/kinematica/basis_intro.tex
+++ b/kinematica/basis_intro.tex
@@ -11,15 +11,15 @@
 \footnote{Het woord 'kinematica' is net zoals 'cinema' en 'kinesist' afgeleid van het Griekse $\kappa \iota \nu \eta \mu \alpha$ dat 'beweging' betekent.} 
 is het onderdeel van de fysica dat de \textbf{bewegingen van voorwerpen beschrijft}, 
 zoals vallende appels, rollende knikkers of rijdende auto's, maar ook de beweging van de maan rond de aarde of de aarde rond de zon. 
-In de kinematica wordt de beweging enkel \textit{beschreven}, zonder de achterliggende oorzaak te \textit{verklaren}. 
+De kinematica beperkt zich tot het \textit{beschrijven} van de beweging, zonder de onderliggende \textit{oorzaak} te onderzoeken. 
+De redenen waarom iets op een bepaalde manier beweegt worden verder behandeld in de \textit{dynamica}.
 
 
 % of moleculen in water of ook in elkaar grijpende tandwieltjes in een mechanisch uurwerk. 
 
 
-In dit hoofdstuk worden de \textbf{basisbegrippen} en \textbf{basisgrootheden} van de kinematica behandeld waarmee in een volgende fase enkele concrete basisbewegingen worden beschreven. (rechtlijnige, cirkelvormige, snelle, trage, versnellende en vertragende, enzovoort)
-
-De kinematica behandelt steeds de vectoriële grootheden \textbf{positie}, \textbf{snelheid} en \textbf{versnelling}, hun verbanden onderling en hun afhankelijk met de scalaire grootheid \textbf{tijd}.
+In dit hoofdstuk worden eerst de \textbf{basisbegrippen} en \textbf{basisgrootheden} van de kinematica behandeld, namelijk de vectoriële grootheden \textbf{positie}, \textbf{snelheid} en \textbf{versnelling}, hun verbanden onderling en hun afhankelijkheid van de scalaire grootheid \textbf{tijd}.
+Vervolgens gebruiken we die begrippen om enkele concrete soorten bewegingen te bestuderen (rechtlijnige, cirkelvormige, snelle, trage, versnellende en vertragende, enzovoort).
 
 \begin{example}
 Als een appel van een boom valt, kan je allerlei vragen stellen over deze valbeweging: 
@@ -28,7 +28,7 @@ Als een appel van een boom valt, kan je allerlei vragen stellen over deze valbew
 	\item Hoe ver valt de appel van de boom?
 	\item Hoe lang duurt het voor de appel de grond raakt? 
 	\item Hoe snel valt de appel? Is die snelheid altijd dezelfde, of valt een appel altijd maar sneller? 
-	\item Als de snelheid van de appel verandert, hoe groot is ze dan bij het begin van de val? En na één seconde? En wat op het moment dat de appel de grond raakt? 
+	\item Als de snelheid van de appel verandert, hoe groot is ze dan bij het begin van de val? En na één seconde? En op het moment dat de appel de grond raakt? 
 \end{itemize}
 
 De kinematica vraagt zich niet af \textit{waarom} een appel naar beneden valt, en bijvoorbeeld niet naar boven.
