--- a/kinematica/basis_positie.tex
+++ b/kinematica/basis_positie.tex
@@ -320,7 +320,11 @@ De boot heeft natuurlijk ook op \textit{elk moment hiertussen} een positie \ldot
 \end{definition}
 
 
-
+\begin{remark} 
+	In één dimensie is het onderscheid tussen een 'vector' $\vec{x}$ en een 'getal' $x$ erg klein: beide kunnen volledig de positie beschrijven. 
+	In twee of drie dimensies kan je de positie wel beschrijven met één vector $\vec{x}$, maar heb je twee of drie getallen $x,y$ of $x,y,z$ nodig.
+\end{remark}
+	
 De \textbf{verplaatsing} tussen $t_1$ en $t_2$ is het verschil in positie tussen de twee tijdstippen $t_1$ en $t_2$, genoteerd met een $\Delta$\(\vec{r}\) (Delta, een Griekse hoofdletter D  van het Engelse 'displacement' of het Franse 'déplacement').
 
 \begin{definition}
@@ -461,7 +465,7 @@ y = -t^2 - 3t \Rightarrow y(x) = -(\sqrt[7]{x})^2 - 3\sqrt[7]{x}
 \end{example}
 
 
-De verplaatsing is niet hetzelfde als de \emph{afgelegde weg} tussen de twee bijbehorende tijdstippen. 
+Let op: de \textit{verplaatsing} is niet hetzelfde als de \emph{afgelegde weg} tussen de twee bijbehorende tijdstippen. 
 Als je een rondje hebt gelopen op de atletiekpiste en terug aan start staat is je (netto) verplaatsing nul, maar jet hebt wel degelijk afstand afgelegd.
 De verplaatsing geeft enkel het verschil (in vogelvlucht) tussen begin- en eindpunt, terwijl de afgelegde weg \(s\) gaat over de afstand die het bewegende voorwerp over zijn baan aflegt. 
 
