notatie: caption/layout

--- a/vectoren/vectoren_notatie.tex
+++ b/vectoren/vectoren_notatie.tex
@@ -60,7 +60,7 @@ De pijl geeft alle kenmerken die een vector vastleggen weer.
 \end{scope}
 \end{tikzpicture}
 \end{image}
-\captionof{figure}{De vector $\vec{z}$ met al zijn componenten.}
+\captionof{figure}{De vector $\vec{z}$ met zijn kenmerken.}
 
 
 Aan de zin van een vector wordt wiskundig een teken gekoppeld dat afhangt van de gekozen referentie-as. 
@@ -83,9 +83,10 @@ De grootte komt immers overeen met de lengte van de vector (en een lengte is alt
 De richting van een vector wordt weergegeven met een eenheidsvector $\vec{e}$ waarvoor $ \lVert \vec{e} \rVert = 1$. 
 Het invoeren van een eenheidsvector blijkt erg nuttig in notaties. 
 Hiermee kunnen alle kenmerken van een vector ook algebraïsch weergegeven worden. 
+% todo: behalve het aanpgrijpingspunt toch???
 
-Er geldt in onderstaande tekeningen dat \(\vec{a} = \pm  \lVert \vec{a} \rVert \cdot \vec{e} = +2 \cdot \vec{e} \) met aangrijpingspunt \(2\). 
-Voor de vector \(\vec{b}\) geldt \(\vec{b} = \pm  \lVert \vec{b} \rVert \cdot \vec{e} = -1 \cdot \vec{e} \) met aangrijpingspunt \(6\). 
+In onderstaande tekening is \(\vec{a} = \pm  \lVert \vec{a} \rVert \cdot \vec{e} = +2 \cdot \vec{e} \) met aangrijpingspunt \(2\). \\
+Voor de vector \(\vec{b}\) geldt dat \ \(\vec{b} = \pm  \lVert \vec{b} \rVert \cdot \vec{e} = -1 \cdot \vec{e} \) met aangrijpingspunt \(6\). 
 
 % PH DIT BESCHRIJVEN IS VEEL EENVOUDIGER MET POOLCOORDINATEN.  
 % TIKZPICTURE DIE DE EENHEIDSVECTOR ILLUSTREERT 
@@ -121,7 +122,7 @@ Voor de vector \(\vec{b}\) geldt \(\vec{b} = \pm  \lVert \vec{b} \rVert \cdot \v
 
 \end{tikzpicture}
 \end{image}
-
+\captionof{figure}{Vectoren en aangrijpingspunten.}
 
 
 %  INSERT TIKZ NORM RICHTING ZIN ALGEBRAISCH 
