skip denkvraag voorlopig ...

--- a/kinematica/basis_versnelling.tex
+++ b/kinematica/basis_versnelling.tex
@@ -371,10 +371,10 @@ Bij ééndimensionale bewegingen wordt de gemiddelde versnelling \(\overline{a}\
 \]
 \end{definition}
 
-\begin{denkvraag*}{}
-Kan je uitleggen wat de eenheid meter per seconde, per seconde betekent? 
-\end{denkvraag*}
-
+% \begin{denkvraag*}{}
+% Kan je uitleggen wat de eenheid meter per seconde, per seconde betekent? 
+% \end{denkvraag*}
+%%% Bizar: veroorzaakt [l.374] Missing number, treated as zero. at <to be read again> <- \c@depthICount
 \subsection*{Ogenblikkelijke versnelling bij ééndimensionale bewegingen}
 
 De gemiddelde versnelling \(\overline{a}\) geeft de verandering in snelheid \textit{tussen} twee tijdstippen \(t_1\) en \(t_2\).  Om de ogenblikkelijke versnelling \(a\) op één tijdstip \(t\) te bepalen wordt -net zoals bij de ogenblikkelijke snelheid- gebruik gemaakt van de afgeleide. 
