--- a/vectoren/vectoren_bewerkingen.tex
+++ b/vectoren/vectoren_bewerkingen.tex
@@ -93,19 +93,198 @@ Grafisch (kwalitatief) bekomt men de resultante via de kopstaartmethode of paral
 De \textbf{grootte van de resultante} (kwantitatief) kan op verschillende manieren bepaald worden. 
 Erg belangrijk hierbij is om meetkundige samenstelling in het oog te houden en zeker niet blindelings de groottes van de gegeven vectoren op te tellen! 
 In het algemeen wordt de grootte van de resultante berekend met de cosinusregel. 
-In evenwijdige of loodrechte gevallen zijn er efficiënte manieren om de resultante te bepalen (som/verschil of stelling van Pythagoras), de meest algemene methode is echter met de (gewijzigde) cosinusregel:
+In evenwijdige of loodrechte gevallen zijn er efficiënte manieren om de resultante te bepalen (som/verschil of stelling van Pythagoras), de meest algemene methode is echter met de (aangepaste) cosinusregel voor de lengte van $\vec{c} = \vec{a} + \vec{b}$:
 
 \[
-\vec{c} = \vec{a} + \vec{b} \Rightarrow \| \vec{c} \|^2 = \| \vec{a} \|^2 + \| \vec{b} \|^2 + 2 \cdot \|\vec{a}\| \cdot \|\vec{b}\| \cdot \cos(\alpha)
+\| \vec{a} + \vec{b} \|^2 = \| \vec{a} \|^2 + \| \vec{b} \|^2 + 2 \cdot \|\vec{a}\| \cdot \|\vec{b}\| \cdot \cos(\alpha)
 \]
 
 met \(\alpha\) de hoek tussen \(\vec{a}\) en \(\vec{b}\). 
 
-%% TODO: verband uitleggen met de 'echte' cosinusregel (waar (mogelijk?) een andere hoek wordt gebruikt, zie voorbeeld 3 met hoek phi.)
-
 \begin{quickquestion*}{}{}
-  Hoe vereenvoudigt de formule als \(\vec{a}\) en \(\vec{b}\) loodrecht staan? Wat als ze dezelfde richting hebben? 
+  Hoe vereenvoudigt de cosinusregel als \(\vec{a}\) en \(\vec{b}\) loodrecht op elkaar staan? \\
+  Hoe vereenvoudigt de cosinusregel als \(\vec{a}\) en \(\vec{b}\) dezelfde richting en dezelfde zin hebben? 
+  Hoe vereenvoudigt de cosinusregel als \(\vec{a}\) en \(\vec{b}\) dezelfde richting en tegengestelde zin hebben? 
 \end{quickquestion*}
+
+
+\begin{expandable}{proposition}{Twee versies van de cosinusregel ?}
+
+
+De 'klassieke' cosinusregel wordt geformuleerd voor de zijden van een driehoek, en zegt  
+\[
+    c^2 = a^2 + b^2 \red{ - } 2 a b \cos\varphi
+\]
+met \(\varphi\) de overstaande hoek van zijde \(c\). 
+
+Merk op dat het teken van de derde term verschillend is. Waarom is dat zo, en hoe moet je dat onthouden?
+
+In een driehoek gebruik je natuurlijkerwijze niet de hoek $\alpha$ tussen de vectoren $\vec{a}$ en $\vec{b}$, maar wel de \textit{complementaire} hoek $\varphi$ tussen de lijnstukken $a$ en $b$.
+
+Volgende tekening en redenering geeft het verband tussen beide situaties, en de bijhorende formuleringen. 
+Het enige verschil is een minteken, en dat komt omdat je afhankelijk van de situatie liever met één van de twee complementaire hoeken werkt. 
+En zoals je op de goniometrische cirkel onmiddellijk kan zien, hebben complementaire hoeken tegengestelde cosinussen. 
+Dat precies dat verschil wordt gecompenseerd door het extra minteken.
+
+
+    \begin{image}[0.8\textwidth]
+
+        \begin{tikzpicture}
+            % TIKZPICTURE met extra \varphi aangeduid
+       
+           \pgfmathsetmacro{\ang}{50} 
+       
+           \coordinate (O) at (0,0); 
+           \coordinate (A) at (\ang :2); 
+           \coordinate (B) at (0:3); 
+           \coordinate (C) at ($ (A) + (B)$); 
+           
+           %\draw[->, -latex, blue   ] (O) -- (A) node[midway, above left]{\( a \)};
+           \draw[red    ]     (O) -- (B) node[midway, below     ]{\( b \phantom{\vec{b}}\)};  % \phantom to get nice alignment !
+           \draw[xmgreen]     (O) -- (C) node[midway, above left]{\( c \)};
+           \draw[blue, thick] (B) -- (C) node[midway, below right]{\( a\)};
+           %\draw[->, dashed, -latex, red , thick] (A) -- (C) node[midway, above left ]{\( \vec{b} \)};
+
+           %\draw pic[ pic text = \(\alpha \), draw, angle radius=0.7cm]                        {angle= B--O--A};
+           %\draw pic[ pic text = \(\gamma \), draw, angle radius=1.2cm, angle eccentricity=1.2]{angle= B--O--C};
+           \draw pic[ pic text = \(\varphi\), draw, angle radius=0.5cm]                        {angle= C--B--O};
+           %\draw pic[ pic text = \(\varphi\), draw, angle radius=0.5cm]                        {angle= A--O--Z};
+
+           \draw (0,-0.7) node[right,scale=0.8]{Natuurlijke hoek in een driehoek: $\varphi$} ;
+       \end{tikzpicture}
+       \begin{tikzpicture}
+            % TIKZPICTURE met extra \varphi aangeduid
+           \pgfmathsetmacro{\ang}{50} 
+              
+           \coordinate (O) at (0,0); 
+           \coordinate (A) at (\ang :2); 
+           \coordinate (B) at (0:3); 
+           \coordinate (C) at ($ (A) + (B)$); 
+           
+           \coordinate (X) at (0:4); 
+
+           \draw[->, -latex, blue          ] (O) -- (A) node[midway, above left]{\( \vec{a} \)};
+           \draw[->, -latex, red           ] (O) -- (B) node[midway, below     ]{\( \vec{b} \)};
+    %       \draw[->, -latex, xmgreen,dashed] (O) -- (C) node[pos=1, above right]{\( \vec{c} = \vec{a}+\vec{b} \)};
+           
+        %    \draw[->, dashed, -latex, red , thick] (A) -- (C) node[midway, above left]{\( \vec{b} \)};
+        %    \draw[->, dashed, -latex, blue, thick] (B) -- (C) node[midway, above left]{\( \vec{a} \)};
+
+           \draw pic[ pic text = \(\alpha \), draw, angle radius=0.7cm] {angle= B--O--A};
+        %    \draw pic[ pic text = \(\alpha \), draw, angle radius=0.7cm] {angle= X--B--C};
+        %    \draw pic[ pic text = \(\varphi\), draw, angle radius=0.7cm] {angle= C--B--O};
+
+           \draw (0,-0.7) node[right,scale=0.8]{Natuurlijke hoek bij vectoren: $\alpha$} ;
+
+        \end{tikzpicture}
+       \begin{tikzpicture}
+            % TIKZPICTURE met extra \varphi aangeduid
+           \pgfmathsetmacro{\ang}{50} 
+              
+           \coordinate (O) at (0,0); 
+           \coordinate (A) at (\ang :2); 
+           \coordinate (B) at (0:3); 
+           \coordinate (C) at ($ (A) + (B)$); 
+           
+           \coordinate (X) at (0:4); 
+           \draw[dotted] (O)--(X);
+
+           \draw[->, -latex, blue          ] (O) -- (A) node[midway, above left]{\( \vec{a} \)};
+           \draw[->, -latex, red           ] (O) -- (B) node[midway, below     ]{\( \vec{b} \)};
+    %       \draw[->, -latex, xmgreen,dashed] (O) -- (C) node[pos=1, above right]{\( \vec{c} = \vec{a}+\vec{b} \)};
+           
+           \draw[->, dashed, -latex, red , thick] (A) -- (C) node[midway, above left]{\( \vec{b} \)};
+           \draw[->, dashed, -latex, blue, thick] (B) -- (C) node[midway, above left]{\( \vec{a} \)};
+
+           \draw pic[ pic text = \(\alpha \), draw, angle radius=0.7cm] {angle= B--O--A};
+           \draw pic[ pic text = \(\alpha \), draw, angle radius=0.7cm] {angle= X--B--C};
+           \draw pic[ pic text = \(\varphi\), draw, angle radius=0.7cm] {angle= C--B--O};
+
+           \draw (0,-0.7) node[right,scale=0.8]{Verband: $\alpha + \varphi = 180^\circ$} ;
+
+        \end{tikzpicture}
+    \end{image}
+
+    \begin{image}[0.7\textwidth]
+       \begin{tikzpicture}
+            % TIKZPICTURE met extra \varphi aangeduid
+           \pgfmathsetmacro{\ang}{50} 
+              
+           \coordinate (O) at (0,0); 
+           \coordinate (A) at (\ang :2); 
+           \coordinate (B) at (0:3); 
+           \coordinate (C) at ($ (A) + (B)$); 
+           
+
+           \draw[            ->, -latex, blue,dashed ] (O) -- (A) node[midway, above left]{\( \vec{a} \)};
+           \draw[very thick, ->, -latex, red,        ] (O) -- (B) node[midway, below     ]{\( \vec{b} \)};
+           \draw[very thick, ->, -latex, xmgreen     ] (O) -- (C) node[pos=1, above right]{\( \vec{c} = \vec{a}+\vec{b} \)};
+           
+           \draw[->, dashed, -latex, red ,           ] (A) -- (C) node[midway, above left ]{\( \vec{b} \)};
+           \draw[->,         -latex, blue, very thick] (B) -- (C) node[midway, below right]{\( \vec{a} \)};
+
+           % \draw pic[ pic text = \(\alpha \), draw, angle radius=0.7cm]                        {angle= B--O--A};
+           % \draw pic[ pic text = \(\gamma \), draw, angle radius=1.2cm, angle eccentricity=1.2]{angle= B--O--C};
+           \draw[very thick] pic[ pic text = \(\varphi\), draw, angle radius=0.7cm]                        {angle= C--B--O};
+
+           \draw (0,-0.7) node[right,scale=0.8]{In een driehoek: $c^2 = a^2 + b^2 \red{-} 2ab\cos\red{\varphi}$ } ;
+
+       \end{tikzpicture}
+       \begin{tikzpicture}
+
+           \pgfmathsetmacro{\ang}{50} 
+       
+           \coordinate (O) at (0,0); 
+           \coordinate (A) at (\ang :2); 
+           \coordinate (B) at (0:3); 
+           \coordinate (C) at ($ (A) + (B)$); 
+           
+           \coordinate (X) at (0:4); 
+           \draw[dotted] (O)--(X);
+
+           
+           \draw[very thick, ->, -latex, blue   ] (O) -- (A) node[midway, above left]{\( \vec{a} \)};
+           \draw[very thick, ->, -latex, red    ] (O) -- (B) node[midway, below     ]{\( \vec{b} \)};
+           \draw[            ->, -latex, xmgreen,dashed] (O) -- (C) node[pos=1, above right]{\( \vec{c} = \vec{a}+\vec{b} \)};
+           
+           \draw[->, dashed, -latex, red ] (A) -- (C) node[midway, above left ]{\( \vec{b} \)};
+           \draw[->, dashed, -latex, blue] (B) -- (C) node[midway, below right]{\( \vec{a} \)};
+
+           \draw[very thick] pic[ pic text = \(\alpha \), draw, angle radius=0.9cm]                        {angle= B--O--A};
+           \draw pic[ pic text = \(\varphi\), draw, angle radius=0.5cm,angle eccentricity=1.3] {angle= C--B--O};
+           \draw pic[ pic text = \(\alpha \), draw, angle radius=0.5cm,angle eccentricity=1.3] {angle= X--B--C};
+
+           \draw (0,-0.7) node[right,scale=0.8]{Met vectoren: $\|c\|^2 = \|a\|^2 + \|b\|^2 \red{+} 2\|a\|\|b\|\cos\red{\alpha}$} ;
+
+       \end{tikzpicture}
+    \end{image}
+    \captionof{figure}{Omdat $\alpha + \varphi = 180^\circ$, is $\cos\varphi = -\cos\alpha$.}
+
+    Het verband tussen beide versies van de cosinusregel is nu duidelijk: afhankelijk van welke hoek je neemt tussen de richtingen van $\vec{a}$ en $\vec{b}$ krijg je ofwel een plusteken, ofwel een minteken.
+    Het is niet de moeite om dat teken van buiten te leren, want het teken volgt onmiddellijk uit het speciale geval wanneer $\vec{a}$ en $\vec{b}$ loodrecht op elkaar staan: dan zijn zowel $\alpha$ als $\varphi$ dus $90^\circ$, en de cosinus is dus nul.% 
+    \footnote{Gelukkig, want de Stelling van Pythagoras zegt dat bij een rechte hoek $c^2 = a^2 + b^2$, en dat klopt enkel met de cosinusregel als de derde term nul is. }
+    \\
+    Als de hoek tussen $\vec{a}$ en $\vec{b}$ \textit{kleiner} wordt, wordt ook $\|\vec{c}\|$ \textit{kleiner} en moet de derde term in de cosinusregel \textit{negatief} zijn.\\
+    Als de hoek tussen $\vec{a}$ en $\vec{b}$ \textit{groter } wordt, wordt ook $\|\vec{c}\|$ \textit{groter } en moet de derde term in de cosinusregel \textit{positief} zijn.
+
+    Naargelang je met de hoek $\alpha$ rekent dan wel met de hoek $\varphi$ wordt het teken van de term met de cosinus dus aangepast.
+
+% \[
+% \|\vec{c}\|^2 = \|\vec{a}\|^2 + \|\vec{b}\|^2 - 2 \,\|\vec{a}\|\,\|\vec{b}\|\cos\varphi
+% \]
+% \[
+% = \|\vec{a}\|^2 + \|\vec{b}\|^2 - 2 \,\|\vec{a}\|\,\|\vec{b}\|\cos(180^\circ - \alpha)
+% \]
+% \[
+% = \|\vec{a}\|^2 + \|\vec{b}\|^2 - 2 \,\|\vec{a}\|\,\|\vec{b}\|(-\cos\alpha)
+% \]
+% \[
+% = \|\vec{a}\|^2 + \|\vec{b}\|^2 + 2 \,\|\vec{a}\|\,\|\vec{b}\|\cos\alpha
+% \]
+
+
+\end{expandable}
+
 
 \begin{example}
 
@@ -206,24 +385,16 @@ dan moet  \(\| \vec{c} \| = \|\vec{a} + \vec{b}\| \) worden berekend met de cosi
        \end{tikzpicture}
     \end{image}
     
-De grootte van de resultante \(\vec{c}\) wordt bepaald met de cosinusregel: 
+De grootte van de resultante \(\vec{c}\) wordt bepaald met bovenstaande versie van de  cosinusregel: 
 
 % Cosinusregel
-% \[
-% \|\vec{c}\|^2 = \|\vec{a}\|^2 + \|\vec{b}\|^2 - 2 \,\|\vec{a}\|\,\|\vec{b}\|\cos\varphi
-% \]
-% \[
-% = \|\vec{a}\|^2 + \|\vec{b}\|^2 - 2 \,\|\vec{a}\|\,\|\vec{b}\|\cos(180^\circ - \alpha)
-% \]
-% \[
-% = \|\vec{a}\|^2 + \|\vec{b}\|^2 - 2 \,\|\vec{a}\|\,\|\vec{b}\|(-\cos\alpha)
-% \]
-% \[
-% = \|\vec{a}\|^2 + \|\vec{b}\|^2 + 2 \,\|\vec{a}\|\,\|\vec{b}\|\cos\alpha
-% \]
+\[
+\|\vec{c}\| = \|\vec{a} / \vec{b}\|  = \sqrt{\|\vec{a}\|^2 + \|\vec{b}\|^2 + 2 \,\|\vec{a}\|\,\|\vec{b}\|\cos\alpha}
+\]
 \[
 = \sqrt{3^2 + 5^2 + 2 \cdot 3 \cdot 5 \cdot \cos 50^\circ} \approx \SI{7.3}{N}. 
 \]
+
 
 \end{question}
 
