expandable voor tijd/positie opmerking

--- a/kinematica/basis_positie.tex
+++ b/kinematica/basis_positie.tex
@@ -187,6 +187,8 @@ In plaats van de tijd boven elke zeilboot te noteren, is het ook mogelijk om de 
 	
 
 % @Bart vincent stelt voor deze paragraaf te laten vallen (helft van de lln gaat flippen; leuk voor enkele slimme gasten; voor meeste leerlingen is dit ontmoedigend)
+
+\begin{expandable}{remark}{Over tijd en ruimte en dimensie en assen}
 Er zit \textbf{geen} extra informatie in bovenstaande figuur! 
 We hebben enkel de tijdsdimensie uitgezet op een horizontale-as en de positie op de verticale-as. 
 Als je nu ijverig natuurkunde aan het studeren bent, kan je 'de positie' van dit blad papier onderzoeken. 
@@ -194,8 +196,7 @@ Dit blad ligt stil op je bureau en je probeert te begrijpen wat er uitgelegd wor
 Dan verandert de positie volgens de positie-as natuurlijk niet, maar het blad beweegt zich wel voort op de tijd-as. \footnote{Want terwijl je dit aan het lezen bent staat de tijd natuurlijk niet stil...\footnotemark}
 \footnotetext{Je blad beweegt zich -eerder saai- constant voort op de tijdsdimensie. Het is echter mogelijk -in de relativiteitstheorie- om ook op meer interessantere manieren op de tijd-as te bewegen.\footnotemark}
 \footnotetext{Aangezien je enkel constant op de tijd-as kan voortbewegen, en dus niet terug kan, lijkt het aangewezen om je tijd goed te benutten. Bijvoorbeeld door wat natuurkunde te leren.}
-
-
+\end{expandable}
 
 De positie van de zeilboot is enkel weergegeven voor een aantal specifieke momenten \(t_0, t_1, t_2, t_3 \text{ en } t_4\). 
 De boot heeft natuurlijk ook op \textit{elk moment hiertussen} een positie \ldots
