Gebaseerd op cursus SPC 2021

--- a/xmPreamble.tex
+++ b/xmPreamble.tex
@@ -1331,10 +1331,10 @@
 \providecommand{\xmsource}{
     \ifonlineTF{
     \begin{xmdiv}{xmsource}
-        Gebaseerd op de cursus van Bart Lambregs (versie 03/2025)
+        Gebaseerd op cursus SPC 2021
     \end{xmdiv}
     }{
-        \renewcommand{\xmorganisatienaam}{{\smaller Gebaseerd op eigen cursus Bart Lambregs}}
+        \renewcommand{\xmorganisatienaam}{{\smaller Gebaseerd op cursus SPC 2021}}
     }
 }
 
